[tool.poetry]
name = "streamlit-helpdesk-dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = {extras = ["tools"], version = "^1.38.0"}
streamlit-apexjs = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
